<resources>
    <string name="app_name">StoryApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_email">Email</string>
    <string name="upload">Upload</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="favorite">Favorite</string>
    <string name="warning_picture_cannot_empty">Picture cannot empty</string>
    <string name="logout">Logout</string>
    <string name="empty_text">NO DATA</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="story_app">Story App</string>
    <string name="setting">Setting</string>
    <string name="language">Language</string>
    <string name="welcome_to_my_story_app">Welcome to My Story App</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="please_log_in">Please log in to your account.</string>
    <string name="create_an_account">Create an Account</string>
    <string name="join_us">Join our community and start sharing your stories with the world!</string>
    <string name="share_stories">Share your stories here</string>
    <string name="invalid_email_address">Invalid Email address</string>
    <string name="password_warning">Password must have 8 characters or more</string>
    <string name="no_data_found">No Data Found</string>
    <string name="add_description">Add Description</string>
    <string name="map">Map</string>
    <string name="retry">Retry</string>
    <string name="show_location">Show My Location</string>
    <string name="location_not_found">Location is not found. Try Again</string>
</resources>